--- a/templates/task/list.html.twig
+++ b/templates/task/list.html.twig
@@ -22,7 +22,7 @@
                             {% if not task.isDone %}Marquer comme faite{% else %}Marquer non terminée{% endif %}
                         </button>
                     </form>
-                    {% if (user == task.author) %}
+                    {% if (user == task.author or is_granted('ROLE_ADMIN')) %}
                         <form action="{{ path('task_delete', {'taskId' : task.id }) }}">
                             <button class="btn btn-danger btn-sm pull-right">Supprimer</button>
                         </form>
